--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,11 @@
 body {
-  background-color: #1a1a1a;
-  color: #f1f1f1;
-  font-family: Arial, sans-serif;
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(22,2,65,1) 100%);
 }
 
-#carousel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+
+h3{
+  color: aliceblue;
 }
 
-.cloud9-item {
-  width: 100px;
-  margin: 0 10px;
-  transition: transform 0.5s ease;
-}
-
-#planet-info h3 {
-  margin-top: 20px;
-  font-size: 2rem;
-  color: #ffcc00;
-}
-
-footer a {
-  color: #ffcc00;
-  text-decoration: none;
-}
-
-.cloud9-item.focused {
-  transform: scale(1.5);
-}
